# letschat

./: .dockerignore  .env.development  .env.development.example  .env.example  .env.production  .env.production.caddy.example  .env.production.tunnel.example  .gitattributes  .gitignore  CLAUDE-UI.md  CLAUDE.md  CODEBASE.md  CODING_RULES.md  DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.prod.base.yml  docker-compose.prod.caddy.yml  docker-compose.prod.tunnel.yml  docker-compose.prod.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/plans/: 1-control-panel.md  1.5-space-permissions-and-discovery.md  2-storage-tiering.md  3-e2ee.md  4-efficiency-cache.md  5-multi-instance-client.md  plan-efficiency-cache.md  plan-security-e2ee.md
.github/workflows/: react-doctor.yml  release.yml  site-deploy.yml  version-check.yml
archive-worker/: .gitignore  ArchiveDatabase.cs  ArchiveWorker.csproj  Dockerfile  Program.cs  Replication.cs  ReplicationWorker.cs  WorkerOptions.cs
auth-service/: Cargo.toml  Dockerfile
auth-service/migrations/: 0001_initial.sql
auth-service/src/: config.rs  errors.rs  main.rs  security.rs  session.rs  state.rs  uploads.rs
auth-service/src/db/: accounts.rs  mod.rs  uploads.rs
auth-service/src/handlers/: admin.rs  auth.rs  discovery.rs  health.rs  livekit.rs  mod.rs
auth-service/src/push/: mod.rs  provider.rs  routes.rs  schema.rs  types.rs  worker.rs
core-api/: .dockerignore  .gitignore  CoreApi.slnx  Dockerfile  README.md
deploy/caddy/: Caddyfile
deploy/examples/: letschat.well-known.json.example
deploy/web/: Caddyfile  Dockerfile
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
livekit/: config.prod.yaml  config.yaml  docker-compose.yml
scripts/: bump-version.ts  core-api-lan.ts  print-lan.ts  sync-downloads.ts
server/: Cargo.toml  Dockerfile.module
server/src/: helpers.rs  lib.rs  schema.rs  views.rs
server/src/reducers/: archive.rs  channels.rs  direct_messages.rs  dm_voice.rs  invites.rs  join_requests.rs  member_management.rs  messages.rs  mod.rs  presence.rs  read_state.rs  servers.rs  social.rs  system.rs  users.rs  voice.rs
site/: package-lock.json  package.json
spacetimedb/: config.prod.toml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppErrorBoundary.tsx  SplashScreen.tsx
src/hooks/: useDeepLink.ts  usePresenceLifecycle.ts  useServerRole.ts  useTypingBroadcastBridge.ts  useUserPresentation.ts  useVoiceStateReconciler.ts  useWebAutoConfig.ts
src/layouts/: AppLayout.tsx
src/lib/: attachmentDownload.ts  authCrypto.ts  authService.ts  devWarnings.ts  discovery.ts  downloadUrls.ts  krisp.ts  livekit.ts  notifications.ts  permissions.ts  spacetimedb.ts  tauri.test.ts  tauri.ts  typingBroadcast.ts  uploadSession.ts  uploads.ts
src/modals/: CreateChannelModal.tsx  CreateServerModal.tsx  DeleteServerModal.tsx  EditChannelModal.tsx  EditServerModal.tsx  InviteModal.tsx  MemberActionModals.tsx  SettingsModal.tsx
src/pages/: AppIndexPage.tsx  AuthPage.tsx  DMPage.tsx  DiscoverPage.tsx  InvitePage.tsx  ServerChannelPage.tsx  ServerManagePage.tsx  SettingsPage.tsx  SetupPage.tsx  WebConnectErrorPage.tsx  WebJoinPage.tsx
src/stores/: channelsStore.ts  connectionStore.ts  discoverStore.ts  dmServerInvitesStore.ts  dmStore.ts  dmVoiceSessionStore.ts  dmVoiceStore.ts  friendsStore.ts  invitesStore.ts  joinRequestStore.ts  mediaDeviceStore.ts  membersStore.ts  messagesStore.ts  presenceStore.ts  readStore.ts  selfStore.ts  serverConfigStore.ts  serverRailStore.ts  serversStore.ts  typingStore.ts  uiStore.ts  usersStore.ts  voiceSessionStore.ts  voiceStore.ts
src/types/: attachments.ts  domain.ts
tests/security/: README.md  friend-by-username.test.ts  global-setup.ts  harness.ts  private-tables.test.ts  visibility.test.ts
(+203 files in other folders)
