[package]
name = "letschat_server"
version = "0.5.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pinned to the 2.4.x line: the SpacetimeDB crate, the `spacetimedb` npm SDK,
# the CLI, and the server image must stay on the same minor or the client
# connection breaks. Bump all four together in a dedicated upgrade.
spacetimedb = "~2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
