[package]
name = "letschat_tauri"
version = "0.1.0"
edition = "2024"
description = "LetsChat Tauri shell"
authors = ["LetsChat Team"]

[dependencies]
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
