[package]
name = "letschat_tauri"
version = "0.7.1"
edition = "2024"
description = "LetsChat Tauri shell"
authors = ["LetsChat Team"]

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
